<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.tollywood2bollywood.t2bliveapp.ContactFragment">


    <include layout="@layout/app_bar_layout" android:id="@+id/contact_appbar"/>



    <View
        android:id="@+id/devider"
        android:layout_below="@+id/contact_appbar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colordevider"/>


    <LinearLayout
        android:layout_marginTop="22dp"
        android:layout_below="@+id/devider"
        android:layout_width="match_parent"
        android:id="@+id/box"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rect_light"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            >
            <customfonts.MyEditText
                android:id="@+id/edit_first_name"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First Name"
                android:background="#00000000"
                android:textSize="@dimen/hinttext"
                android:textColorHint="@color/subtext"
                android:textColor="@color/text"
                android:maxLines="1"
                />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/lastname"
            android:layout_marginTop="21dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rect_light"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            >
            <customfonts.MyEditText
                android:id="@+id/edit_last_name"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:background="#00000000"
                android:textSize="@dimen/hinttext"
                android:textColorHint="@color/subtext"
                android:textColor="@color/text"
                android:maxLines="1"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/number"
            android:layout_marginTop="21dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rect_light"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            >
            <customfonts.MyEditText
                android:id="@+id/number_phone"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:background="#00000000"
                android:textSize="@dimen/hinttext"
                android:textColorHint="@color/subtext"
                android:textColor="@color/text"
                android:inputType="number"
                android:maxLength="12"
                android:maxLines="1"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/subject"
            android:layout_marginTop="21dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rect_light"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            >
            <customfonts.MyEditText
                android:id="@+id/subject_mail"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject"
                android:background="#00000000"
                android:textSize="@dimen/hinttext"
                android:textColorHint="@color/subtext"
                android:textColor="@color/text"
                android:maxLines="1"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email"
            android:layout_marginTop="21dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rect_light"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            >
            <customfonts.MyEditText
                android:id="@+id/email_gmail"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:background="#00000000"
                android:textSize="@dimen/hinttext"
                android:textColorHint="@color/subtext"
                android:textColor="@color/text"
                android:maxLines="1"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/discripition"
            android:layout_marginTop="21dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rect_light"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="22dp"
            >
            <customfonts.MyEditText
                android:id="@+id/discripition_"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reason_to_contact"
                android:background="#00000000"
                android:textSize="@dimen/hinttext"
                android:textColorHint="@color/subtext"
                android:textColor="@color/text"
                android:maxLines="2"
                />
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btn"
        android:layout_width="200dp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:layout_below="@id/box"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:layout_height="40dp" />




</RelativeLayout>
